<resources>
    <string name="app_name">TreasureHunt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    ////// DATABASE PATH STRINGS //////
    <string name="path_users">Users</string>

    <string name="db_users_admin">admin</string>
    <string name="db_users_email">email</string>
    <string name="db_users_name">username</string>

    ////// STRINGS RELATED TO LOGIN //////
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_show_password">Show Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Please use a valid email.</string>
    <string name="invalid_missing">You failed to provide information for one or more fields</string>
    <string name="login_failed">One or more of your account details were incorrect</string>
    <string name="login_forgotten">Forgotten your login details?</string>

    //////  STRINGS RELATED TO REGISTERING A NEW ACCOUNT //////
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="ui_title_register">Account Registration</string>
    <string name="action_create_account">Create Account</string>

    <string name="invalid_username">"Please enter a username between 3 and 12 characters"</string>
    <string name="invalid_password_length">Please make your password at least 8 characters long</string>
    <string name="invalid_passwords_dont_match">Please make sure "confirm Password" matches "Password"</string>
    <string name="registration_failed">This email is linked to an existing account. Please sign in or reset your password.</string>

    ////// STRINGS RELATED TO THE MAP //////
    <string name="map_current_location">Current Location</string>
    <string name="map_location_switch">Location Switch</string>
    <string name="description_location">Move the camera to your current location.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    ////// LOG TAGS //////
    <string name="log_main">Main.Info</string>
    <string name="log_login">Login.Info</string>
    <string name="log_register">Register.Info</string>
    <string name="log_points_of_interest">PointsOfInterest.Info</string>
    <string name="log_map">Map.Info</string>
    <string name="log_map_loc">LocLatLocation</string>
    <string name="log_settings">Settings.Info</string>

    ////// STATUS TAGS //////
    <string name="log_created">in onCreate</string>
    <string name="log_started">in onStart</string>
    <string name="log_resume">in onResume</string>
    <string name="log_pause">in onPause</string>
    <string name="log_stop">in onStop</string>
    <string name="log_destroy">in onDestroy</string>
    <string name="log_restart">in onRestart</string>

    ////// LOGS //////
    <string name="log_user">User </string>
    <string name="log_current_login"> currently logged in</string>
    <string name="log_login_success">signInWithEmail:Success</string>
    <string name="log_login_failure">signInWithEmail:failure</string>
    <string name="log_register_user_success">DocumentSnapshot added with ID: </string>
    <string name="log_register_user_failure">Error adding document: </string>
    <string name="log_register_success">createUserWithEmail:success</string>
    <string name="log_register_failure">createUserWithEmail:failure</string>
    <string name="log_return">return</string>
    <string name="log_document_error">Error getting documents</string>

    ////// STRINGS RELATED TO TOOLBAR //////
    <string name="action_logout">LogOut</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>

</resources>