<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"></item>
    <item
        android:id="@+id/settingsBtn"
        android:title="@string/action_settings"></item>
</menu>